# DheeraAssignment

./: .gitignore  CLAUDE.md  README.md
backend/: detector.py  download_models.py  main.py  pyproject.toml  tracker.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: fps.js  main.js  overlay.js  recorder.js  style.css  ws.js
