[project]
name = "hand-detection-backend"
version = "0.1.0"
description = "Real-time hand detection backend using FastAPI + MediaPipe"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mediapipe>=0.10.18",
    "opencv-python>=4.10",
    "numpy>=1.26,<2.0",
    "pillow>=11.0",
    "websockets>=13",
]

[tool.uv]
package = false
